--- a/www/index.html
+++ b/www/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
    <title>tittle</title>
-	<script>
-     window.location='./main.html';
-   </script>
+<script src="cordova.js"></script>
+<script>
+	window.location='./main.html';
+</script>
+
   <body>
   </body>
 </html>
