--- a/www/chef-profile-edit-with-map-picker.html
+++ b/www/chef-profile-edit-with-map-picker.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Foodie</title>
+<title>Fudi</title>
 
 <!-- Sets initial viewport load and disables zooming  -->
 <meta name="viewport" content="initial-scale=1.0, width=device-width" />
@@ -20,10 +20,11 @@
 <div id="sidebar-wrapper">
 	<nav id="nav">
 		<ul class="sidebar-nav nav" id="navRight">
-			<li class="menu-heading"><strong><a href="#">FOODIE</a></strong></li>
+			<li class="menu-heading"><strong><a href="#">Fudi</a></strong></li>
 			<li><a class="sub" href="map.html">Chefs</a></li>
 			<li><a class="sub" href="user-profile.html">My Profile</a></li>
 			<li><a class="sub" href="reservations.html">My Orders</a></li>
+			<li><a class="sub" href="notifications.html">Notifications</a></li>	<li><a class="sub" href="settings.html">Settings</a></li>
 		</ul>
 	</nav>
 </div>
@@ -49,7 +50,7 @@
 		</div>
 		<div class="form-group">
 			<input class="form-control required" type="email" name="email" value="" placeholder="Paypal Email">
-			<p class="help-block">Enter paypal account email where you'd like to receive Foodie payments.</p>
+			<p class="help-block">Enter paypal account email where you'd like to receive Fudi payments.</p>
 		</div>
 		<div class="form-group">
 			<input class="form-control required" type="phone" name="phone" value="" placeholder="Phone">
@@ -188,19 +189,19 @@ $(document).ready(function(e) {
 			formData += '&userId='+localStorage.getItem('userId')+'&userToken='+localStorage.getItem('userToken'); 
 			$.ajax({
 				type: "POST", dataType: 'json', url: ServerAjax+"?h=chefUpdate", data: formData,
-				beforeSend: function() { waitingDialog.show('Loading', {dialogSize: 'sm', progressType: 'info'}); },
+				beforeSend: function() { waitingDialog.show(cLan.Loading, {dialogSize: 'sm', progressType: 'info'}); },
 				complete: function() { waitingDialog.hide(); },
 			}).fail(  ajaxError )
 			.done(function(data){
 				if (data.Success == 'true') {
 					localStorage.setItem('chefData', data.chefData );
 					localStorage.setItem('chefStatus', data.chefStatus );
-					BAlert.find('.modal-header h3').html('<i class="fa check"></i> Success');
+					BAlert.find('.modal-header h3').html('<i class="fa check"></i>'+cLan.Success);
 					BAlert.find('.modal-body').html('<p class="text-success">Your profile has been updated successfuly.</p>');
 					BAlert.modal();
 					setSubmitButton();
 				} else { 
-					BAlert.find('.modal-header h3').html('<i class="fa fa-exclamation-triangle"></i> Error');
+					BAlert.find('.modal-header h3').html('<i class="fa fa-exclamation-triangle"></i> '+cLan.Error);
 					BAlert.find('.modal-body').html('<p class="text-danger">'+data.Msg+'</p>');
 					BAlert.modal();
 				}
