--- a/www/main.html
+++ b/www/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Foodie</title>
+<title>Fudi</title>
 
 <!-- Sets initial viewport load and disables zooming  -->
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
@@ -25,47 +25,54 @@ html, body{ height:100% }
 	content-positioning-anchor: 50% 50%;
 }
 </style>
+
+
+
 </head>
 <body style="background-color:#FFF;">
 <div style="height:100%; background:url(images/splash.png?) center center no-repeat">
 
 <div id="bottom-bar" style="padding:5px; text-align:center">
 	
-Copyright (c) 2016  Foodie Systems, Inc.
+Copyright (c) 2016  Fudi Systems, Inc.
 	
 </div>	
 </div>
 <script src="cordova.js"></script>
 <script src="js/jquery-1.11.3.min.js"></script> 
-<script src="js/bootstrap.min.js"></script>
-<script src="js/common.js"></script>
+<script src="js/bootstrap.min.js"></script> 
+<script src='js/knockout-3.4.0.js'></script>
+<script src="js/common.js"></script> 
 <script>
 
+ 
+$(document).ready(function() {
+    // are we running in native app or in a browser?
+    window.isphone = false;
+    if(document.URL.indexOf("http://") === -1 
+        && document.URL.indexOf("https://") === -1) {
+        window.isphone = true;
+    }
+
+    if( window.isphone ) {
+        document.addEventListener("deviceready", onDeviceReady, false);
+    } else {
+        onDeviceReady();
+    }
+});
+
+
+function onDeviceReady() {
+	//alert('deviceready..');
+	navigator.geolocation.getCurrentPosition(showPosition, onShortError, { maximumAge: 0, timeout: 5000, enableHighAccuracy:true });
+}
 
 var Timeouts = 0;
 
-document.addEventListener("deviceready", onDeviceReady, false);
-
-function onDeviceReady() {
-	useragent = navigator.userAgent;
-	if ( useragent.indexOf('iPhone') !== -1 || useragent.indexOf('Android') !== -1 ) {
-		navigator.geolocation.watchPosition( 
-			showPosition, 
-			onShortError, 
-			{ enableHighAccuracy: true, maximumAge: 3000, timeout: 5000 }
-		);			
-		// or let other geolocation capable browsers to get their static position
-	} else if ( navigator.geolocation ) {
-		navigator.geolocation.getCurrentPosition( showPosition, onShortError );
-	}
-}
-
-
-
 function onShortError(error){
 	try{
-		BAlert.find('.modal-header h3').html('<i class="fa fa-exclamation-triangle"></i> GPS Error ' );
-		BAlert.find('.modal-body').html('<p class="text-danger">App is unable to find your current position. Either GPS signals are weak or GPS has been switched off.</p>');
+		BAlert.find('.modal-header h3').html('<i class="fa fa-exclamation-triangle"></i> GPS '+cLan.Error );
+		BAlert.find('.modal-body').html('<p class="text-danger">'+cLan.NoGPS+'</p>');
 		BAlert.modal();	
 		
 		if(error.code == 3){
@@ -101,55 +108,12 @@ function showPosition(position) {
 		}else{
 			setTimeout(function(){ document.location = 'map.html'; }, 1000);	
 		}
-	/*
-	var formData = 'lat='+localStorage.getItem("lat")+'&lng='+localStorage.getItem("lng")+'&user_id='+localStorage.getItem("userId")+'&app_token='+localStorage.getItem("userToken");
-	$.ajax({
-		type: "POST", dataType: 'json', url: ServerAjax+"?h=initApp",
-		data: formData
-	}).fail(  ajaxError )
-	.done(function(data){
-		console.log('done');
-		if (data.Success == 'true') {
-			localStorage.setItem('nearbyChefs', data.nearbyChefs );
-			localStorage.setItem('nearbyChefsCount', data.nearbyChefsCount );
-			localStorage.setItem('chefStatus', data.chefStatus );
-			localStorage.setItem('chefData', data.chefData );
-			localStorage.setItem('userData', data.userData );
-			
-			if(empty(localStorage.getItem("userId"))){
-				setTimeout(function(){ document.location = 'register.html'; }, 1000);
-			}else{
-				setTimeout(function(){ document.location = 'map.html'; }, 1000);
-			}
-			
-		}else{ 
-			BAlert.find('.modal-header h3').html('<i class="fa fa-exclamation-triangle"></i> Error');
-			BAlert.find('.modal-body').html('<p class="text-danger">'+data.Msg+'</p>');
-			BAlert.modal();
-		}
-		if (data.JS) { eval(data.JS); }
-	});// ajax
-	*/
 	}catch(err) {
 		alert(err.message);
 	}
 }
-/** /
-if(localStorage.getItem("userId")=== null){
-	setTimeout(function(){ document.location = 'register.html'; }, 2000);
-}else{
-	setTimeout(function(){ document.location = 'map.html'; }, 2000);
-}
-/**/
 
-/*
-if (!navigator.geolocation){
-	alert('Geolocation not  available');
-}else{
-	//var watchId = navigator.geolocation.watchPosition(showPosition, onShortError, { maximumAge: 300000, timeout: 5000, enableHighAccuracy:true });
-	navigator.geolocation.getCurrentPosition(showPosition, onShortError, { maximumAge: 0, timeout: 5000, enableHighAccuracy:true });
-}
-*/
+
 
 </script>
 </body>
