--- a/www/chef_profile.html
+++ b/www/chef_profile.html
@@ -654,7 +654,7 @@ var ppApp = {
 		//alert('initPaymentUI');
 		var clientIDs = {
 			"PayPalEnvironmentProduction": "Abd6gqI-wgpVBdCHvBhYEuJZZtFL7ybnizVC0eOyVnBTWc--CyUf7dE44ZsVkF4pZdz6SkO2GAg4sf1c",
-			"PayPalEnvironmentSandbox": "AV5JRlY4ZpMXj2_aizYv-IiAbgcJhassrlQvOftz4246yfDgMSlPwE4JkBs3O6vaCeTvyGAufbQjcg3N"
+			"PayPalEnvironmentSandbox": ""
 		};
 		try {
 			PayPalMobile.init(clientIDs, ppApp.onPayPalMobileInit);
